[package]
name = "gtree_foundation_sale"
version = "0.1.0"
description = "Experimental Localnet Foundation Sale for Green Tree"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gtree_foundation_sale"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.1.2", features = ["associated_token", "token"] }
solana-instructions-sysvar = "3.0.1"
solana-sdk-ids = "3.1.0"
